Update website content and images

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -37,7 +37,7 @@ body {
   font: 16px/1.6 'Raleway', Arial, Helvetica, sans-serif;
   color: #fff;
   text-align:center;
-  background: #222;
+  background: #131212;
 }
 img {
   border: 0;
@@ -65,12 +65,12 @@ html {
   transition: all 0.4s ease;
 }
 a {
-  color: #fff;
+  color: #21377df0;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #fff;
+  color: #21367d79;
   outline: none;
   text-decoration: underline;
 }
@@ -416,7 +416,7 @@ a#logo {
 }
 .welcome-title {
   font-weight: 700;
-  font-size: 120px;
+  font-size: 100px;
   margin-bottom: 10px;
   letter-spacing:0.02em;
 }
@@ -454,8 +454,10 @@ a#logo {
 05. ABOUT ME
 ================================================*/
 .about-img {
-  margin: 0 auto 40px;
+  margin: 70px auto 70px;
   position:relative;
+  height: 80%;
+  width: 80%;
 }
 .about-img img {
   border-radius: 10px;
@@ -492,7 +494,7 @@ a#logo {
   background: rgba(0,0,0,0.25);
 }
 .counter-box span {
-  font-size: 26px;
+  font-size: 20px;
   font-weight: 700;
 }
 .counter-icon {
@@ -509,7 +511,7 @@ a#logo {
 }
 .count-number, .counted {
   display:block;
-  font-size:36px;
+  font-size:18px;
   font-weight:700;
   line-height:1;
   margin-bottom:10px;
@@ -538,8 +540,8 @@ a#logo {
   font-size: 64px;
 }
 .service-box {
-  font-size:15px;
-  padding:40px 20px;
+  font-size:13px;
+  padding:10px 20px;
   height:100%;
 }
 .services-list .item:hover {
@@ -606,7 +608,7 @@ a#logo {
   padding: 20px;
   background-color: rgba(250,250,250,0.25);
   width: 100%;
-  height: 60px;
+  height: 40px;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   -webkit-transition: all 0.4s ease;
@@ -638,219 +640,4 @@ a#logo {
    margin-top: 30%;
   color: #1e1e1e;
   margin-bottom: 20px;
-}
-
-/*==============================================
-08. CONTACT BLOCK CSS
-================================================*/
-::-webkit-input-placeholder {
-  color:#fff !important;
-  opacity:1;
-}
-::-moz-placeholder {
-  color:#fff !important;
-  opacity:1;
-}
-:-ms-input-placeholder {
-  color:#fff !important;
-  opacity:1;
-}
-:-moz-placeholder {
-  color:#fff !important;
-  opacity:1;
-}
-.input-field {
-  margin-bottom:15px;
-}
-.form-control {
-  height: 50px;
-  color:#fff;
-  border: none;
-  background:rgba(250,250,250,0.05);
-  border: 1px solid rgba(250,250,250,0.5);
-  border-radius: 10px;
-  padding:4px 22px;
-  font-size:14px;
-  margin-bottom: 30px;
-}
-.form-control:focus {
-  box-shadow:none;
-  outline:none;
-  background:rgba(0,0,0,0.05);
-  border: 1px solid rgba(250,250,250,1);
-  color:#fff;
-}
-.index .form-control.form-control-dark {
-  background: rgba(250,250,250, 0.75);
-  color: #fff;
-}
-.index .form-control.form-control-dark:focus {
-  background: rgba(54, 40, 158, 0.85);
-  color: #fff;
-}
-.index .form-control.form-control-dark::-webkit-input-placeholder {
-  color: #fff !important;
-}
-.index .form-control.form-control-dark::-moz-placeholder {
-  color:#fff !important;
-}
-.index .form-control.form-control-dark:-ms-input-placeholder {
-  color:#fff !important;
-}
-.index .form-control.form-control-dark:-moz-placeholder {
-  color:#fff !important;
-}
-.form-control.form-control-dark:focus {
-  background: rgba(0, 0, 0, 0.2);
-}
-.form-control.form-control-dark {
-  background: rgba(0, 0, 0, 0.1);
-  color: #222;
-  border: none;
-}
-.form-control.form-control-dark::-webkit-input-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-.form-control.form-control-dark::-moz-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-.form-control.form-control-dark:-ms-input-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-.form-control.form-control-dark:-moz-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-textarea.form-control {
-  height:123px;
-  padding-top:15px;
-}
-.contact-section .btn {
-  width:100%;
-}
-.contact-box {
-  text-align:left;
-}
-.contact-box h4 {
-  font-size:24px;
-}
-.contact-box h4:after {
-  content:'';
-  display:block;
-  width:50px;
-  height:2px;
-  background:#fff;
-  margin:12px 0;
-}
-.contact-row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-bottom: 30px;
-  background: rgba(250,250,250,0.25);
-  border-radius: 10px;
-  padding: 30px;
-  font-weight: 700;
-}
-.contact-row i {
-  width:55px;
-  font-size: 30px;
-  display:block;
-}
-.contact-row i.fa-envelope {
-  font-size: 25px;
-}
-
-/*==============================================
-09. TESTIMONOALS BLOCK CSS
-================================================*/
-.testimonials-section .item {
-  background-color: rgba(250,250,250,0.25);
-  padding: 40px;
-  border-radius: 10px;
-}
-.testimonials-section .item img {
-  width: 140px;
-  height: 140px;
-  margin: 0 auto;
-}
-.testimonials-section .item h4 {
-  margin-top: 40px;
-  font-size: 22px;
-  text-transform: capitalize;
-  font-weight: 700;
-}
-.testimonials-section .item p {
-  font-size: 17px;
-  font-style: italic;
-}
-
-/*==============================================
-10. SKILLS BLOCK CSS
-================================================*/
-.skills-row {
-  margin-top: 80px;
-}
-.skill-item {
-  border-bottom: 1px solid rgba(250,250,250,0.1);
-  margin-bottom: 50px;
-  padding-bottom: 50px;
-}
-.last-skill {
-  border-bottom: none;
-}
-.skills-row span {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-  background-color: #fff;
-  color: #1e1e1e;
-  border-radius: 50%;
-  font-size: 16px;
-  font-weight: 700;
-  left: 0;
-  top: -21px;
-  position: absolute;
-  z-index: 999;
-}
-.skills-row h6 {
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #fff;
-  text-align: right;
-  margin-bottom: -10px;
-}
-.skill-bar {
-  width: 70%;
-  height: 6px;
-  border-radius: 3px;
-  background-color: rgba(250,250,250,0.25);
-  position: relative;
-}
-.filled-bar {
-  position: absolute;
-  z-index: 99;
-  width: 64%;
-  height: 6px;
-  background-color: #fff;
-  border-radius: 3px;
-}
-.filled-bar-2 {
-  position: absolute;
-  z-index: 99;
-  width: 82%;
-  height: 6px;
-  background-color: #fff;
-  border-radius: 3px;
 }
